--- a/src/components/Dialogs.css
+++ b/src/components/Dialogs.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     top:0;
+    padding: 5px;
     position: fixed;
     left:0;
 }
@@ -18,7 +19,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 5px;
-    box-shadow:1px 1px 8px rgba(0,0,0,0.12)
+    box-shadow:1px 1px 8px rgba(0,0,0,0.12);
 }
 
 .modal input{
@@ -29,6 +30,7 @@
     text-align: center;
 }
 
-.modal .button-area{
-    margin:20px 0;
+.modal .button-area {
+    margin: 20px 0;
+
 }
